@@ -1586,6 +1586,8 @@ The Key item allows you to bind any shortcut key to the current menu item, and t
 
 <p>After you have set a key combination, when you reopen the menu the new key shortcut will be displayed in the menu.
 
+<p><b>TIP: To use only the keyboard in the Set Key dialog</b>, press a key combination and then press Enter to click the Set button.  Or, to click Unset, press the Escape key twice.  To cancel, simply close the dialog (usually Alt-F4).
+
 <p>You can also change the key for a menu item using a <a href="#designmode-shortcuts">design mode shortcut</a> instead of the Design Menu.  Highlight the menu item and press Ctrl+K, <b>or</b> use the mouse shortcut Ctrl + Middle-Click.
 
 <!-- # Icon -->
